cmake_minimum_required(VERSION 3.10)
project(build C)

set(CMAKE_C_STANDARD 11)

add_executable(build
        static/css/main.25f1b8f8.css
        static/css/main.25f1b8f8.css.map
        static/js/main.0841bf51.js
        static/js/main.0841bf51.js.map
        asset-manifest.json
        index.html
        service-worker.js)
